<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_room"
            android:icon="@drawable/home"
            android:title="@string/menu_home"/>

        <item
            android:id="@+id/nav_data_setting"
            android:icon="@drawable/menu_data_setting"
            android:title="@string/menu_data_setting"/>

        <item
            android:id="@+id/nav_con_setting"
            android:icon="@drawable/menu_con_setting"
            android:title="@string/menu_con_setting"/>

        <item
            android:id="@+id/nav_system_setting"
            android:icon="@drawable/menu_system_setting"
            android:title="@string/menu_system_setting" />
        <item
            android:id="@+id/nav_user_setting"
            android:icon="@drawable/menu_user_setting"
            android:title="@string/menu_user_setting" />



    </group>


</menu>